# hide

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  ClangWrappers.h  Makefile  Utils.h  analyze_visible_symbols.py  run-valgrind.sh  run-vim.bat  run-vim.sh  test.cpp  test.py  test.vim
clang/: Common.h  CompilationDatabase.h  Index.cpp  Index.h  String.h
hide/: Buffer.cpp  Buffer.h  BuildLog.cpp  BuildLog.h  BuildLogLine.h  ContextUnawareSyntaxHighlighter.cpp  ContextUnawareSyntaxHighlighter.h  Hide.cpp  Hide.h  IBuildSystem.h  IFile.h  IIndexQuery.h  IIndexable.h  ILanguagePlugin.h  IPartialIndex.h  IPartialIndexer.h  Indexer.cpp  Indexer.h  Location.h  Project.cpp  Project.h  ProjectFiles.cpp  ProjectFiles.h  Utils.h
hide-vim/autoload/hide/: Buffer.vim  Logger.vim  SyntaxHighlight.vim  Utils.vim
hide-vim/plugin/: hide-vim.py  hide.vim
hide-vim/plugin/hide_vim/: Adapters.py  BuildProcessListener.py  HidePlugin.py  IndexQueryListener.py  LoggerSink.py  Model.py  Profiler.py  SyntaxHighlighter.py  Utils.py  __init__.py
hide-vim/syntax/: hide-build-log.vim  hide-index-query.vim  hide-log.vim
hide/buildsystems/: BuildProcessBase.cpp  BuildProcessBase.h  DefaultBuildProcess.cpp  DefaultBuildProcess.h
hide/buildsystems/cmake/: CMakeBuildConfig.h  CMakeBuildSystem.cpp  CMakeBuildSystem.h  ICMakeBackend.h  NinjaCMakeBackend.cpp  NinjaCMakeBackend.h
hide/fs/: FsMonitor.cpp  FsMonitor.h
hide/lang_plugins/: CTagsInvoker.cpp  CTagsInvoker.h  GenericCTagsIndexer.cpp  GenericCTagsIndexer.h
hide/lang_plugins/cpp/: CompileCommandsJsonCompilationInfo.cpp  CompileCommandsJsonCompilationInfo.h  CppCTagsIndexer.cpp  CppCTagsIndexer.h  File.cpp  File.h  ICppCompilationInfo.h  LanguagePlugin.cpp  LanguagePlugin.h
hide/lang_plugins/cpp/clang/: Common.h  CompilationDatabase.h  Index.cpp  Index.h  String.h
hide/utils/: BoostJsonParser.h  ClassContentChecks.h  Comparers.h  Diff.h  Executable.cpp  Executable.h  FileSystemNotifier.cpp  FileSystemNotifier.h  FileSystemUtils.cpp  FileSystemUtils.h  IComparable.h  ILoggerSink.h  IPipeReadEndHandler.h  IPipeWriteEnd.h  IReadBuffer.h  IWriteBuffer.h  ListenersHolder.h  Logger.cpp  Logger.h  LoggerMessage.cpp  LoggerMessage.h  MembersVisitor.h  NamedLogger.h  OperationProfiler.h  PTree.h  PipeLinesReader.cpp  PipeLinesReader.h  Profiler.h  ReadBufferBase.h  ReadBufferLinesListener.cpp  ReadBufferLinesListener.h  StringBuilder.h  Thread.cpp  Thread.h  Utils.h  rethread.h
swig/: hide.i
